tests/NormalTests/paczka1/small_fuzzy/44994686.err
Error in line 1: veNC9wl6gv S2 72,6
Error in line 12: Ga7Or S171 17,4
Error in line 13: Ga7Or A412 21,2
